* cal1.jap -> main.jsp

--- a/logpot/src/main/webapp/resources/style_calendar.css
+++ b/logpot/src/main/webapp/resources/style_calendar.css
@@ -1,63 +1,78 @@
 @charset "UTF-8";
 
-*{
- padding: 0;  
- margin: 0;
- box-sizing: border-box; 
- overflow: hidden;
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+	overflow: hidden;
 }
 
-body{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-height: 100vh;
-	max-width:100vw;
+body {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	max-height: 100vh;
+	max-width: 100vw;
 	background-color: ivory;
-} 
-/* -------------------------------------------- */
-
-.leftBox{
-    width: 25%;
-    height: 100vh;
-    padding: 5px;
 }
-.logo{
+/* -------------------------------------------- */
+.leftBox {
+	width: 25%;
+	height: 100vh;
+}
+
+.leftBox>div {
+	margin: 5px;
+}
+
+.logo {
 	background-color: bisque;
 	float: left;
-    
 }
-.year-month{
+
+.year-month {
 	background-color: ivory;
 	float: right;
-    
 }
-.box-dDay{
+
+.box-dDay {
 	background-color: bisque;
 	clear: both;
 }
-.box-search{
-	background-color: ivory;
+
+.box-search {
+	background-color: slategrey;
+	height: 30px;
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
+	border-radius: 5px;
 }
-.box-widget{
-	
+
+.box-search input[type="search"] {
+	border: 0px;
+	background-color: transparent; /* 배경 투명색 */
+	padding: .8em .5em;
+	outline-style: none; /* 포커스 박스 스타일 제 */
+}
+
+.box-widget {
 	background-color: bisque;
-	
 }
 
 /* -------------------------------------------- */
-
-.calendarBox{
-    padding: 5px;
-    width: 100%;
-    height: 100vh;
+.calendarBox {
+	padding: 5px; width : 100%;
+	height: 100vh;
+	width: 100%;
 }
-.week, .date{
+
+.week, .date {
 	display: grid;
 	grid-template-columns: repeat(7, 1fr);
 }
 
-.week{
+.week {
 	justify-items: center;
 	align-items: center;
 	height: 30px;
@@ -68,23 +83,56 @@ body{
 
 .date {
 	height: 95%;
-	flex-grow: 1;
 	border-left: 1px solid grey;
-    border-top: 1px solid grey;
-    border-radius: 5px;
+	border-top: 1px solid grey;
+	border-radius: 5px;
 }
 
-.date > div{
-	padding: 3px;
+.date>div {
+	padding: 5px;
 	border: 1px solid grey;
 	border-left: none;
 	border-top: none;
 }
 
-/* -------------------------------------------- */
+.dateBtn {
+	all: unset; /* 기존 버튼 디자인 제거 */
+    width: 100%;
+    height: 100%;
+    text-align: left;
+    display: flex;
+    cursor: pointer; /* 영역에 마우스 대면 손가락커서로 변형 */
+}
 
-.rightBox{
-    border: solid 1px black;
-    width: 3%;
-    height: 100vh;
+.wrapDateBtn:hover{
+	background-color: #00000007;
+}
+/* -------------------------------------------- */
+.rightBox {
+	background-color: bisque;
+	width: 5%;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+    align-items: center;
+}
+.emptyBox{
+	height: 50%;
+    width: 100%;
+}
+
+.wrapRightBtn{
+	width: 100%;
+	height: 50%;
+	display: flex;
+	flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+.wrapRightBtn>button{
+	all:unset;
+	cursor: pointer;
+}
+i{
+	font-size: 20px;
 }
